NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/NATT_Team_Calendar__c.object-meta.xml
<CustomObject>
    <description>Used for a Team Calendar of Events for NATT</description>
    <label>Team Calendar</label>
    <nameField>
        <label>Team Calendar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Calendar</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>