NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>for display purposes - NATT</description>
    <formula>IF(Street_Address__c &lt;&gt; &quot;&quot;,Street_Address__c + BR(),NULL) +
IF(City__c &lt;&gt; &quot;&quot;,City__c + &quot;, &quot;,NULL) +
State_Province__c + &quot; &quot; + Postal_Code__c + BR() +
Country__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>