NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The City of the event - natt</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>