NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The Country of the address related to this event</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>