NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>NATT</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>