NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end date of the event - NATT</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>