NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The postal code of the event - NATT</description>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>