NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Start Date of the event - NATT</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>