NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>The state of the event - NATT</description>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>