NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>The street address associated with the special event</description>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>