NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>NATT</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Travel</fullName>
            </value>
            <value>
                <fullName>Out of the Office</fullName>
            </value>
            <value>
                <fullName>Special Dealer Event</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>