NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/recordTypes/CTBR_Internal.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Internal</fullName>
    <active>true</active>
    <description>Used by the CTBR Team</description>
    <label>CTBR Internal</label>
</RecordType>