NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/recordTypes/CTM_Internal.recordType-meta.xml
<RecordType>
    <fullName>CTM_Internal</fullName>
    <active>true</active>
    <description>Used by the CTM Team</description>
    <label>CTM Internal</label>
</RecordType>