NATTQA-ENV/force-app/main/default/objects/NATT_Team_Calendar__c/recordTypes/NA_Internal.recordType-meta.xml
<RecordType>
    <fullName>NA_Internal</fullName>
    <active>true</active>
    <description>Used by the NA Team</description>
    <label>NA Internal</label>
</RecordType>